--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "AI_SDK_LOG_WARNINGS=false bun run src/index.ts"
+    "start": "bun run src/index.ts 2>&1 | grep -v 'AI SDK Warning'"
   },
   "devDependencies": {
     "@types/bun": "^1.3.5"
