--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "bun run src/index.ts 2>&1 | grep -v 'AI SDK Warning'"
+    "start": "bun run src/index.ts 2>&1 | grep -v 'AI SDK Warning'",
+    "check": "tsc --noEmit",
+    "check:all": "tsc --noEmit && cd frontend && tsc --noEmit"
   },
   "devDependencies": {
     "@types/bun": "^1.3.5"
@@ -15,6 +17,7 @@
   "dependencies": {
     "@openrouter/ai-sdk-provider": "^1.5.4",
     "ai": "^6.0.3",
+    "jsonrepair": "^3.13.1",
     "zod": "^4.2.1"
   }
 }
